objects/wkitsm__CaseTemplate__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__Context__c</fullName>
        <description>Unique string identifier for template context.</description>
        <inlineHelpText>Unique string identifier for template context.</inlineHelpText>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkitsm__IsCopyTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Copy Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__OverriddenBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Standard Case Template that a custom template can override.</description>
        <inlineHelpText>The Standard Case Template that a custom template can override.</inlineHelpText>
        <label>Override For</label>
        <referenceTo>wkitsm__CaseTemplate__c</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>CaseTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TemplateType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>CatalogItem</fullName>
                    <label>Catalog Item</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>